--- a/nav/aboutme.html
+++ b/nav/aboutme.html
@@ -22,7 +22,7 @@
 <h2>Welcome to my Travel Photography Blog!</h2>
 <h2>My name is Andreya Augst, and I'm a senior IST student at Penn State University.</h2>
 <h2>I love photography and travel, and here you can see photos from my many adventures.</h2>
-<h2>I created this site using HTML and CSS. You can view the code <a href="https://github.com/aaugst/photo">style="text-decoration:underline;"here</a>.</h2>
+<h2>I created this site using HTML and CSS. You can view the code <a href="https://github.com/aaugst/photo"><u>here</u></a>.</h2>
 
 </body>
 </html>
