--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <! -- IST250 SP21 Final Project by Andreya Augst -->
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <title>Home</title>
@@ -44,6 +43,10 @@
     <div class="flex-item">
         <a href="gallery/nice.html"><img class="cover-img" src="graphics/nice-1.jpg" alt="View of French Riviera, Nice, France" title="Nice, France"></a>
         <div class="caption">Nice, France</div>
+    </div>
+    <div class="flex-item">
+        <a href="gallery/nice.html"><img class="cover-img" src="graphics/nice-1.jpg" alt="View of French Riviera, Nice, France" title="Nice, France"></a>
+        <div class="caption">Pittsburgh, PA</div>
     </div>
 </div>
 
