--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="caption">Nice, France</div>
     </div>
     <div class="flex-item">
-        <a href="gallery/nice.html"><img class="cover-img" src="graphics/nice-1.jpg" alt="View of French Riviera, Nice, France" title="Nice, France"></a>
+        <a href="gallery/pittsburgh.html"><img class="cover-img" src="graphics/nice-1.jpg" alt="View of French Riviera, Nice, France" title="Nice, France"></a>
         <div class="caption">Pittsburgh, PA</div>
     </div>
 </div>
