--- a/gallery/pittsburgh.html
+++ b/gallery/pittsburgh.html
@@ -22,16 +22,8 @@
 <h1>Boston, MA</h1>
 
 <!-- Entry 1 -->
-<h2>September 19, 2020 - Harvard Bridge</h2>
-<img src="../graphics/boston-night.jpg" alt="View of Boston Skyline at Night" title="Boston, MA">
-
-<!-- Entry 2 -->
-<h2>February 11, 2020 - Logan Airport</h2>
-<img src="../graphics/boston-plane.jpg" alt="View of Boston Skyline from Plane Window" title="Boston, MA">
-
-<!-- Entry 3 -->
-<h2>September 29, 2019 - North End</h2>
-<img src="../graphics/boston-bird.jpg" alt="Seagull in North End, Boston" title="Boston, MA">
+<h2>October 10, 2023 - Pittsburgh Skyline</h2>
+<img src="../graphics/pittsburgh-skyline.jpg" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA">
 
 </body>
 </html>
