--- a/gallery/pittsburgh.html
+++ b/gallery/pittsburgh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Boston, MA</title>
+    <title>Pittsburgh, PA</title>
 </head>
 <body>
 <!-- Title -->
@@ -19,7 +19,7 @@
 
 <!-- Page Title -->
 <h1><a href="../index.html">&larr;</a></h1>
-<h1>Boston, MA</h1>
+<h1>Piitsburgh, PA</h1>
 
 <!-- Entry 1 -->
 <h2>October 10, 2023 - Pittsburgh Skyline</h2>
