--- a/gallery/pittsburgh.html
+++ b/gallery/pittsburgh.html
@@ -23,7 +23,7 @@
 
 <!-- Entry 1 -->
 <h2>October 10, 2023 - Pittsburgh Skyline</h2>
-<img src="../graphics/pittsburgh-skyline.jpeg" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA">
+<img src="../graphics/pittsburgh-skyline.jpg" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA">
 
 </body>
 </html>
