--- a/gallery/pittsburgh.html
+++ b/gallery/pittsburgh.html
@@ -19,11 +19,11 @@
 
 <!-- Page Title -->
 <h1><a href="../index.html">&larr;</a></h1>
-<h1>Piitsburgh, PA</h1>
+<h1>Pittsburgh, PA</h1>
 
 <!-- Entry 1 -->
 <h2>October 10, 2023 - Pittsburgh Skyline</h2>
-<img src="../graphics/pittsburgh.png" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA">
+<img src="../graphics/pittsburgh.png" alt="View of Pittsburgh Skyline 2" title="Pittsburgh, PA">
 
 </body>
 </html>
