--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="caption">Nice, France</div>
     </div>
     <div class="flex-item">
-        <a href="gallery/pittsburgh.html"><img class="cover-img" src="graphics/pittsburgh-skyline.jpg" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA"></a>
+        <a href="gallery/pittsburgh.html"><img class="cover-img" src="graphics/pittsburgh.jpg" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA"></a>
         <div class="caption">Pittsburgh, PA</div>
     </div>
 </div>
