--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="flex-item">
         <a href="gallery/pittsburgh.html"><img class="cover-img" src="graphics/pittsburgh-skyline.jpg" alt="View of Pittsburgh Skyline" title="Pittsburgh, PA"></a>
-        <div class="caption">Pittsburgh, PA</div>
+        <div class="caption"> TEST Pittsburgh, PA</div>
     </div>
 </div>
 
