--- a/nav/contact.html
+++ b/nav/contact.html
@@ -17,15 +17,9 @@
     </ul>
 </nav>
 
-<!-- Form -->
-<h2>Send me a Message!</h2>
+<!-- Links -->
 
-<form>
-    <label>Name <input type="text"></label>
-    <label>Email <input type="email"></label>
-    <label>Message <input type="text"></label>
-    <input type="submit" value="Send">
-</form>
+    
 
 </body>
 </html>
