--- a/nav/contact.html
+++ b/nav/contact.html
@@ -19,7 +19,8 @@
 
 <!-- Links -->
 
-    
-
+<h2><a class="show-link" href="https://www.linkedin.com/in/andreyaaugst/">Linkedin</a></h2>
+<h2><a class="show-link" href="https://github.com/aaugst">GitHub</a></h2>
+<h2><a class="show-link" href="mailto:andreyaaugst@gmail.com">Email</a></h2>
 </body>
 </html>
