--- a/gallery/london.html
+++ b/gallery/london.html
@@ -28,7 +28,7 @@
 
 <!-- Entry 2 -->
 <h2>July 01, 2016 - <a class="show-link" href="https://www.towerbridge.org.uk/plan-your-visit">Tower Bridge</a></h2>
-<img src="../graphics/towerbridge-2.jpg" alt="Bird Flying over Tower Bridge" title="London, England">
+<img src="../graphics/towerbridge-2-2.jpg" alt="Bird Flying over Tower Bridge" title="London, England">
 
 </body>
 </html>
