--- a/gallery/boston.html
+++ b/gallery/boston.html
@@ -23,7 +23,7 @@
 
 <!-- Entry 1 -->
 <h2>September 19, 2020 - Harvard Bridge</h2>
-<img src="../graphics/boston-night.jpg" alt="View of Boston Skyline at Night" title="Boston, MA">
+<img src="../graphics/boston-night-2.jpg" alt="View of Boston Skyline at Night" title="Boston, MA">
 
 <!-- Entry 2 -->
 <h2>February 11, 2020 - Logan Airport</h2>
