--- a/gallery/seattle.html
+++ b/gallery/seattle.html
@@ -25,14 +25,13 @@
 <h2>August 06, 2020 - <a class="show-link" href="https://www.chihulygardenandglass.com/">Chihuly Garden and Glass Museum</a></h2>
 <div class="column">
     <img src="../graphics/chihuly-seattle-augst.jpg" alt="View of Space Needle and Glass Sculpture" title="Seattle, WA">
-    <img src="../graphics/chihuly-2.jpg" alt="Glass Sculpture" title="Seattle, WA">
-    <img src="../graphics/chihuly-3.jpg" alt="Glass Sculpture" title="Seattle, WA">
+    <img src="../graphics/chihuly-2-2.jpg" alt="Glass Sculpture" title="Seattle, WA">
+    <img src="../graphics/chihuly-3-2.jpg" alt="Glass Sculpture" title="Seattle, WA">
 
 <!-- Entry 2 -->
 <h2>August 06, 2020 - Views of Seattle</h2>
 <div class="column">
-    <img src="../graphics/seattle-fountain.jpg" alt="View of Seattle Fountain and Space Needle" title="Seattle, WA">
-    <img src="../graphics/seattle-lake.jpg" alt="View of Seattle Skyline" title="Seattle, WA">
+    <img src="../graphics/seattle-lake-2.jpg" alt="View of Seattle Skyline" title="Seattle, WA">
 </div>
 
 </body>
