--- a/gallery/boston.html
+++ b/gallery/boston.html
@@ -22,7 +22,7 @@
 <h1>Boston, MA</h1>
 
 <!-- Entry 1 -->
-<h2>September 19, 2020 - Harvard Bridge</h2>
+<h2>September 19, 2020 - View from Harvard Bridge</h2>
 <img src="../graphics/boston-night-2.jpg" alt="View of Boston Skyline at Night" title="Boston, MA">
 
 <!-- Entry 2 -->
@@ -30,7 +30,7 @@
 <img src="../graphics/boston-plane.jpg" alt="View of Boston Skyline from Plane Window" title="Boston, MA">
 
 <!-- Entry 3 -->
-<h2>September 29, 2019 - North End</h2>
+<h2>September 29, 2019 - Seagull in North End</h2>
 <img src="../graphics/boston-bird.jpg" alt="Seagull in North End, Boston" title="Boston, MA">
 
 </body>
