--- a/nav/aboutme.html
+++ b/nav/aboutme.html
@@ -18,8 +18,7 @@
 </nav>
 
 <!-- Intro Paragraph -->
-<img src="../graphics/newlinkedinpicjan42024.png" alt="" title="">
-<h2>My name is Andreya Augst. I'm a designer, coder, and hobby photographer.</h2>
+<h2>My name is Andreya Augst. I'm a designer and amateur photographer.</h2>
 
 </body>
 </html>
